@@ -27,12 +27,11 @@
  */
 package org.hisp.dhis.apphub;
 
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
+import java.util.Set;
 import java.util.regex.Pattern;
-import org.hisp.dhis.common.IllegalQueryException;
+import org.hisp.dhis.feedback.ConflictException;
 import org.hisp.dhis.feedback.ErrorCode;
-import org.hisp.dhis.feedback.ErrorMessage;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
@@ -41,8 +40,8 @@ import org.springframework.http.MediaType;
  * @author Lars Helge Overland
  */
 public class AppHubUtils {
-  private static final ImmutableSet<String> ILLEGAL_QUERY_STRINGS =
-      ImmutableSet.of("..", "//", "http://", "https://", "file://");
+  private static final Set<String> ILLEGAL_QUERY_STRINGS =
+      Set.of("..", "//", "http://", "https://", "file://");
 
   private static final Pattern API_VERSION_PATTERN = Pattern.compile("v\\d+");
 
@@ -51,15 +50,15 @@ public class AppHubUtils {
    * strings.
    *
    * @param query the query.
-   * @throws IllegalQueryException if the query is invalid.
+   * @throws ConflictException if the query is invalid.
    */
-  public static void validateQuery(String query) throws IllegalQueryException {
+  public static void validateQuery(String query) throws ConflictException {
     if (query == null || query.isEmpty()) {
-      throw new IllegalQueryException(new ErrorMessage(ErrorCode.E1000));
+      throw new ConflictException(ErrorCode.E1000);
     }
 
     if (ILLEGAL_QUERY_STRINGS.stream().anyMatch(query::contains)) {
-      throw new IllegalQueryException(new ErrorMessage(ErrorCode.E1001));
+      throw new ConflictException(ErrorCode.E1001);
     }
   }
 
@@ -67,11 +66,11 @@ public class AppHubUtils {
    * Validate the API version. Must start with {@code v} followed by an integer.
    *
    * @param apiVersion the API version string.
-   * @throws IllegalQueryException if the API version is invalid.
+   * @throws ConflictException if the API version is invalid.
    */
-  public static void validateApiVersion(String apiVersion) throws IllegalQueryException {
+  public static void validateApiVersion(String apiVersion) throws ConflictException {
     if (!API_VERSION_PATTERN.matcher(apiVersion).matches()) {
-      throw new IllegalQueryException(new ErrorMessage(ErrorCode.E1002));
+      throw new ConflictException(ErrorCode.E1002);
     }
   }
 
@@ -82,8 +81,7 @@ public class AppHubUtils {
    * @return the sanitized query.
    */
   public static String sanitizeQuery(String query) {
-    query = query.replaceFirst("^/*", "");
-    return query;
+    return query.replaceFirst("^/*", "");
   }
 
   /**
@@ -95,6 +93,6 @@ public class AppHubUtils {
   public static <T> HttpEntity<T> getJsonRequestEntity() {
     HttpHeaders headers = new HttpHeaders();
     headers.setAccept(Lists.newArrayList(MediaType.APPLICATION_JSON));
-    return new HttpEntity<T>(headers);
+    return new HttpEntity<>(headers);
   }
 }
